resources/default-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: zadanie-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: spcr.spg51.dev/lab/hello-app:1.0 
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend-service
  namespace: zadanie-2
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-app
