resources/ingress-for-lamp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-lamp-stack
  namespace: zadanie-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: default-backend-service
      port:
        number: 80
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
      - path: /mysql
        pathType: Prefix
        backend:
          service:
            name: mysql
            port:
              number: 3306
